# blackroad-os-prism-enterprise

./: .blackroad.json  .env.example  .env.production  .eslintrc.cjs  .gitattributes  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  AGENT_CENSUS_COMPLETE.md  AGENT_IDS_P1_P1250.txt  AGENT_OPS_README.md  AGENT_PLATFORM_SUMMARY.md  AGENT_SYSTEM.md  AGENT_WORKBOARD.md  ALEXA_AMUNDSON_ASSESSMENT_LETTER.md  AMUNDSON_FRAMEWORK_SUMMARY.md  AUTOMATION_STATUS.md  BLACKROAD_COMPLETE_FRAMEWORK.md  BLACKROAD_GITHUB_AGENT_PLAYBOOKS_EMOJI.md  BLACKROAD_SERVICES.md  BRANCH_AUDIT_REPORT.md  CHANGELOG.md  CLEANUP_DECISIONS.md  CLEANUP_PLAN.md  CLEANUP_RESULTS.md  CLEANUP_SUMMARY.md  CODEBASE_3D_METAVERSE_ANALYSIS.md  CODEX_PROMPT_PUBLIC_LAUNCH.md  CONTRIBUTING.md  Caddyfile  DECISIONS.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  Dockerfile  FAST_TRACK_DELIVERY.md  HARDENING_SHIPLIST.md  KILLSHOT.md  MERGE_PLAN.md  (+83 more)
.codacy/: codacy.yaml
.danger/: dangerfile.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: AUTOMATION_RECOVERY_PLAN.md  AUTOMATION_RUNBOOK.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  captains-log.template.md  copilot-instructions.md  dependabot.yml  labels.yml  mention-routes.yml  pull_request_template.md
.husky/: commit-msg  pre-commit
08_papers_notes/: 2025-02-Quantum-RL-QEC.md  2025-11-11-graph-logic-boundaries.md
RUNBOOKS/: blackroad-domain-automation.md
_trash/: README.md
agent/: __init__.py  api.py  config.py  daemon.py  dashboard.py  jobs.py  models.py  telemetry.py
agents/: README.md  agent_role_notebook.md  agent_wellness_system.py  auto_novel_agent.py  blackroad_agent_framework.py  cash_forecast_bot.py  cleanup_bot.py  comment_bot.py  config_guardian.py  consent_policy.py  cusum_monitor_agent.py  dependency_doctor.py  deploy_students.py  doc_sweep_agent.py  drift_detection_service.py  formatter_fox.py  github_communication_hub.py  intents.yaml  license_sentinel.py  lucidia_encompass.py  metrics_muse.py  multi_platform_orchestrator.py  personas.py  platform_identity_manager.py  pr_automation_bot.py  pr_autopilot.py  pr_cleanup_bot.py  readme_ranger.py  rohonc_decoder.py  security_shepherd.py  service_sweeper.py  silas_router.py  student_bots.py  test_auto_novel_agent.py  webber_bot.py  workflow_wizard.py
analysis/: nphase_weierstrass.py  repo_scan_capabilities.md  rohonc_decoder.py  selectors_autocorr.py  tap_null_isi.py  variance_surfaces.py
api/: openapi.yaml
app/: __init__.py  main.py  oidc.py  routes.py
apps/svc-template-fastapi/: Dockerfile  README.md  pyproject.toml
apps/svc-template-fastapi/app/: __init__.py  config.py  instrumentation.py  main.py  metrics.py  routes.py  structured_logging.py
apps/svc-template-fastapi/tests/: test_health.py  test_main.py
attest/: README.md  attest.js  manifest.schema.json
audits/: engine.py
backend/: .env.example  auth.js  data.js  migrate.js  package-lock.json  rate-limiter.js  server.js  validators.js
blackroad-agent/: setup.py
blackroad-web-starter/: .env.example  .gitignore  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vitest.config.ts
bootstrap_engine/: __init__.py  config.py  health.py  status.py  utils.py
bots/: __init__.py  archivist.py  base.py  bus.py  close_bot.py  critic.py  executor.py  integration_bots.py  librarian.py  planner.py  revops_bot.py  sop_bot.py  sre_bot.py  (+2 more)
modules/qlm_lab/: Makefile  README.md  pyproject.toml  requirements-dev.txt
modules/qlm_lab/.github/workflows/: ci.yml
modules/qlm_lab/demos/: demo_bell.py
modules/qlm_lab/docs_local/: bell_chsh.md  grover_intro.md  qft_notes.md
modules/qlm_lab/modules/qlm_lab/scripts/: make_gate_input.py
modules/qlm_lab/notebooks/: 01_bell_chsh.ipynb  02_grover_vs_bruteforce.ipynb  03_qft_phase.ipynb  04_codegen_with_selftests.ipynb
modules/qlm_lab/prism/ci/: qlm_lab.coverage.json  qlm_lab.rag.json
modules/qlm_lab/qlm_lab/: __init__.py  api.py  bus.py  lineage.py  policies.py  proto.py
modules/qlm_lab/qlm_lab/agents/: __init__.py  archivist.py  base.py  coder.py  critic.py  orchestrator.py  planner.py  qlm.py  researcher.py
modules/qlm_lab/qlm_lab/cache/: __init__.py  prompt_cache.py
modules/qlm_lab/qlm_lab/demos/: demo_bell.py  demo_codegen_tests.py  demo_grover.py  demo_phase_reasoning.py  demo_rag.py  demo_toolcaller.py  demo_toolformer_prompt.py
modules/qlm_lab/qlm_lab/fewshot/: bell_hist.yaml  chsh.yaml  grover.yaml  index.yaml  qft_phase.yaml
modules/qlm_lab/qlm_lab/llm/: __init__.py  providers.py  runtime.py  toolformer.py
modules/qlm_lab/qlm_lab/retrieval/: __init__.py  chunk.py  index.py  ingest.py  search.py
modules/qlm_lab/qlm_lab/tools/: __init__.py  files.py  la.py  math_cas.py  quantum_np.py  quantum_qiskit.py  registry.py  tests.py  viz.py
modules/qlm_lab/scripts/: make_gate_input.py
modules/qlm_lab/tests/: test_agents_loop.py  test_bridge_api.py  test_prompt_cache.py  test_proto_and_policies.py  test_quantum_np.py  test_researcher_agent.py  test_retrieval_stack.py  test_toolcalling.py  test_toolformer.py
services/llm/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
services/llm/.github/workflows/: ci.yaml
services/llm/app/: __init__.py  cache.py  config.py  main.py  templates.py
services/llm/app/providers/: __init__.py  anthropic_provider.py  base.py  echo_provider.py  ollama_provider.py  openai_provider.py
services/llm/k8s/: deployment.yaml
services/llm/tests/: test_api.py  test_providers.py  test_templates.py
services/message-bus/: Dockerfile  README.md  pyproject.toml
services/message-bus/app/: main.py
services/origin-qlm-bridge/: Dockerfile  README.md  pyproject.toml
services/origin-qlm-bridge/src/origin_qlm_bridge/: __init__.py  app.py  config.py  schemas.py
services/origin-qlm-bridge/src/origin_qlm_bridge/routes/: __init__.py  jobs.py
services/origin-qlm-bridge/tests/: test_health.py
services/policy-engine/: Dockerfile  README.md  pyproject.toml
services/policy-engine/app/: __init__.py  main.py
services/policy-engine/tests/: test_engine.py
(+5071 files in other folders)
