[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-lab"
version = "0.1.0"
description = "Quantum computing teaching lab"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Quantum Lab", email = "labs@example.com" }]
dependencies = [
    "typer>=0.15.1,<0.22",
    "pydantic>=2.6.4,<3",
    "pyyaml>=6.0.2,<7",
    "hypothesis>=6.103.4,<7",
    "numpy>=1.26,<3",
    "matplotlib>=3.8,<4",
    "regopy>=1.0.0,<2",
    "sympy>=1.12",
    "nbformat>=5.10",
    "nbconvert>=7.16",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]
qiskit = ["qiskit", "qiskit-aer", "qiskit-ibm-runtime"]
viz = ["matplotlib"]

[project.urls]
Homepage = "https://example.com/quantum-lab"

[tool.pytest.ini_options]
addopts = "-q --cov=quantum_lab --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["quantum_lab*"]
