[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-lab"
version = "0.1.0"
description = "Quantum computing teaching lab and agent orchestration toolkit"
readme = "README-quantum-lab.md"
requires-python = ">=3.11"
authors = [{ name = "Quantum Lab", email = "labs@example.com" }]
dependencies = [
    "numpy>=1.26,<3",
    "matplotlib>=3.8,<4",
    "sympy>=1.12",
    "torch>=2.2,<3",
    "pyyaml>=6.0,<7",
    "typer>=0.15.1,<0.22",
    "pydantic>=2.6.4,<3",
    "hypothesis>=6.103.4,<7",
    "nbformat>=5.10",
    "nbconvert>=7.16",
    "regopy>=1.0.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.2",
]
qiskit = ["qiskit", "qiskit-aer", "qiskit-ibm-runtime"]
viz = ["matplotlib>=3.8,<4"]

[project.urls]
Homepage = "https://example.com/quantum-lab"

[tool.pytest.ini_options]
addopts = "-q --cov=qlm_lab.tools.quantum_np --cov=quantum_lab.core.circuit --cov-report=term-missing --cov-fail-under=90"
testpaths = [
    "tests/test_agents_loop.py",
    "tests/test_proto_and_policies.py",
    "tests/test_quantum_np.py",
    "tests/test_circuit.py",
    "tests/test_measurement.py",
    "tests/test_states.py",
    "tests/test_gates.py",
    "tests/test_noise.py",
    "tests/test_qft_grover.py",
    "tests/test_amundson_integrator_module.py",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.setuptools.packages.find]
where = ["."]
include = ["qlm_lab*", "quantum_lab*"]
exclude = ["modules*"]
