[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-lab"
version = "0.1.0"
description = "Quantum computing teaching lab"
readme = "README-quantum-lab.md"
requires-python = ">=3.11"
authors = [{ name = "Quantum Lab", email = "labs@example.com" }]
dependencies = [
    "numpy>=1.26,<3",
    "matplotlib>=3.8,<4",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
qiskit = ["qiskit", "qiskit-aer", "qiskit-ibm-runtime"]
viz = ["matplotlib"]

dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]

[project.urls]
Homepage = "https://example.com/quantum-lab"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.setuptools.packages.find]
where = ["."]
include = ["quantum_lab*"]
