[project]
name = "qlm-lab"
version = "0.1.3"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "matplotlib",
    "numpy",
    "pyyaml",
    "sympy",
]

[project.optional-dependencies]
qiskit = [
    "qiskit",
    "qiskit-aer",
]
viz = [
    "matplotlib",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
