[tool.poetry]
name = "message-bus"
version = "0.1.0"
description = "Distributed message bus for multi-agent communication"
authors = ["BlackRoad Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic = "^2.9.0"
redis = "^5.0.0"
websockets = "^13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
