[project]
name = "origin-qlm-bridge"
version = "0.1.0"
description = "FastAPI bridge between Origin Campus gateway and the QLM task runners."
authors = [{ name = "BlackRoad Ops", email = "ops@blackroad.io" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.27,<0.28",
  "pydantic>=2.6,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "httpx>=0.27,<0.28",
  "sqlmodel>=0.0.14,<0.0.15",
  "structlog>=24.1,<25.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "httpx>=0.27,<0.28",
  "ruff>=0.4,<0.5"
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
ignore = ["E203"]
