[tool.poetry]
name = "policy-engine"
version = "0.1.0"
description = "OPA-based policy enforcement engine for Prism multi-agent platform"
authors = ["BlackRoad Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
httpx = "^0.27.0"
pyyaml = "^6.0.0"
prometheus-client = "^0.21.0"
python-json-logger = "^3.1.0"
watchdog = "^5.0.0"
# OPA evaluation
opa-python-client = {version = "^1.3.0", optional = true}

[tool.poetry.extras]
opa = ["opa-python-client"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
